更新 CountDownLatch 示例代码